--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTC-8" />
         <title>RUN BUDDY</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <!-- navigation -->
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+                </h1>
             <nav>
                 <!-- Unordered list element -->
                 <ul>
