--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
   </section>
 
   <!-- "what we do" section -->
-  <section id="what-we-do">
+  <section id="what-we-do" class="intro">
     <h2>What We Do</h2>
+    <p>
+        butcher selfies chambray chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+    </p>
 
     <div>
         <!-- insert this img element-->
@@ -92,9 +95,7 @@
         <img src="./assets/images/step-4.svg" alt="" />
         <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
-    <p>
-        butcher selfies chambray chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-    </p>
+    
   </section>
 
   <!-- "what you do" section -->
