--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTC-8" />
-        <title>RUN BUDDY</title>
-        <link rel="stylesheet" href="./assets/css/style.css" />
-    </head>
-   
-    <body>
-        <!-- navigation -->
-        <header>
-            <h1>
-                <a href="/">RUN BUDDY</a>
-                </h1>
-            <nav>
-                <!-- Unordered list element -->
-                <ul>
-                    <!-- List item element -->
-                    <li>
-                        <!-- Anchor element-->
-                        <a href="#what-we-do">What We Do</a>
-                        </li>
-                        <li>
-                            <a href="#what-you-do">What You Do</a>
-                        </li>
-                        <li>
-                            <a href="#your-trainers">Your Trainers</a>
-                        </li>
-                        <li>
-                            <a href="#reach-out">Reach Out</a>
-                        </li> 
-                </ul>
-            </nav>
-        </header>
 
-         <!-- hero/jumbotron -->
+<head>
+  <meta charset="UTF-8" />
+  <title>Run Buddy</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
+
+<body>
+  <!-- navigation -->
+  <header>
+    <h1>
+      <a href="/">
+        RUN BUDDY
+      </a>
+    </h1>
+    <nav>
+      <!-- Unordered list element -->
+      <ul>
+        <!-- List item element-->
+        <li>
+          <!-- Anchor element -->
+          <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+          <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+          <a href="#your-trainers">Your Trainers</a>
+        </li>
+        <li>
+          <a href="#reach-out">Reach Out</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- hero/jumbotron -->
   <section class="hero">
     <div class="hero-form">
       <h3>Get Started Today</h3>
@@ -67,65 +70,58 @@
 
   <!-- "what we do" section -->
   <section id="what-we-do" class="intro">
-    <h2 class="selection-title primary-border">What We Do</h2>
+    <h2 class="section-title primary-border">What We Do</h2>
     <p>
-        butcher selfies chambray chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
+      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+      sustainable Intelligentsia umami deep v craft
     </p>
-
-    <div>
-        <!-- insert this img element-->
-        <img src="./assets/images/step-1.svg" alt="" />
-        <h3>Step 1: Fill Out the Form Above.</h3>
-        <p>You're already here, so why not?</p>
-    </div>
-
-    <div>
-        <img src="./assets/images/step-3.svg" alt="" />
-        <h3>Step 2: Consult with One of Our Trainers. </h3>
-        <p>Are you here to build muscle, lose weight, or just feel good?</p>
-    </div>
-
-    <div>
-        <img src="./assets/images/step-3.svg" alt="" />
-        <h3>Step 3: Get Running.</h3>
-        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-    </div>
-
-    <div>
-        <img src="./assets/images/step-4.svg" alt="" />
-        <p>Bi-weekly checkins with your trainer will keep you focused</p>
-    </div>
-    
   </section>
 
   <!-- "what you do" section -->
   <section id="what-you-do" class="steps">
-    <h2 class="selection-title secondary-border">What You Do</h2>
+    <h2 class="section-title secondary-border">What You Do</h2>
 
-    <div> 
-        <h3>Step 1: <span>Fill Out The Form Above.</span></h3>
-        <p>Your're already here, so why not?</p>
+    <div>
+      <img src="./assets/images/step-1.svg" alt="" />
+      <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+      <p>You're already here, so why not?</p>
     </div>
 
     <div>
-        <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+      <img src="./assets/images/step-2.svg" alt="" />
+      <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
+      <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
 
     <div>
-        <h3>Step 3: <span>Get Running.</span></h3>
-        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+      <img src="./assets/images/step-3.svg" alt="" />
+      <h3>Step 3: <span>Get Running.</span></h3>
+      <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
 
     <div>
-        <h3>step 4: <span>See Results.</span> </h3>
-        <p>Bi-weekly checkins with your trainer will keep you focused </p>
+      <img src="./assets/images/step-4.svg" alt="" />
+      <h3>Step 4: <span>See Results.</span></h3>
+      <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
   </section>
 
   <!-- "meet the trainers" section -->
-  <section>
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title prrimary-border"> 
+        Meet The Trainers</h2> 
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainers-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Stength</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                </p>
+            </div>
+        </article>
   </section>
 
   <!-- "reach out" section -->
